# dicom-echo

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .taplo.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  conftest.py  ptw.ini  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  propose_enhancement.md
.github/actions/cargo/: action.yaml
.github/actions/poe/: action.yaml
.github/actions/poetry/: action.yaml
.github/workflows/: codeql.yml  dependabot-merge.yaml  pr-poe-skipped.yaml  pr-poe.yaml  pr-poetry.yaml  push-poe.yaml  push-poetry.yaml
backend/: Cargo.toml
backend/src/: client_exceptions.rs  lib.rs
echoscu/: __init__.py  __main__.py  cli.py
rust/: Cargo.toml
src/dicom_echo/: __init__.py  __main__.py  backend.pyi  cli.md  cli.py
src/echoscu/: backend.pyi
tests/: __init__.py  conftest.py  fixtures.py  ruff.toml  test_pyapi.py  test_pycli.py
