[package]
name = "dicom-echo"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "backend"
crate-type = [ "cdylib" ]

[dependencies]
dicom-core = "0.7.1"
dicom-dictionary-std = "0.7.0"
dicom-object = "0.7.1"
dicom-transfer-syntax-registry = "0.7.1"
dicom-ul = "0.7.1"
pyo3 = "0.22.0"
