[package]
edition = "2021"
name    = "dicom-echo"
version = "0.2.3-post.97+73011d8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name       = "backend"

[dependencies]
dicom-core                     = "0.8.1"
dicom-dictionary-std           = "0.8.0"
dicom-object                   = "0.8.1"
dicom-transfer-syntax-registry = "0.8.1"
dicom-ul                       = "0.8.1"
pyo3                           = "0.25.1"
